# wayland-tracer

./: .gitignore  README  meson.build  meson_options.txt
debian/: changelog  control  copyright  rules
man/: meson.build  wayland-tracer.1.scd  wayland-tracer.man
src/: frontend-analyze.c  frontend-bin.c  tracer-analyzer.c  tracer.c  tracer.h  wt_perfetto.h
subprojects/: .gitignore  percetto.wrap
